      Perlmonks.
    - Fixed failing t/030-grammer.t under 5.9.5. Exact cause still unknown;
      something to do with localisation of $1 et all I think.
    - Fixed use of three arg open in t/compat/test-harness-compat; was failing
      on 5.6.2.
    - Fixed runtests --exec option. T::H wasn't passing the exec option to
      T::P.

0.52  14 July 2007
    - Incorporate Schwern's investigations into TAP versions.
      Unversioned TAP is now TAP v12. The lowest explicit version number
      that can be specified is 13.
    - Renumbered tests to eliminate gaps.
    - Killed execrc.  The '--exec' switch to runtests handles all of this for
      us.
    - Refactored T::P::Iterator into
      T::P::Iterator::(Array|Process|Stream) so that we have a
      process specific iterator with which to experiment with
      STDOUT/STDERR merging.
    - Removed vestigial exit status handling from T::P::I::Stream.
    - Removed unused pid interface from T::P::I::Process.
    - Fixed infinite recursion in T::P::I::Stream and added regression
      coverage for same.
    - Added tests for T::P::I::Process.
    - TAP::Harness now displays the first five TAP syntax errors and
      explains how to pass the -p flag to runtests to see them all.
    - Added merge option to TAP::Parser::Iterator::Process,
      TAP::Parser::Source, TAP::Parser and TAP::Harness.
    - Added --merge option to runtests to enable STDOUT/STDERR merging.
      This behaviour used to be the default.
    - Made T::P::I::Process use open3 for both merged and non-merged
      streams so that it works on Windows.
    - Implemented Eric Wilhelm's IO::Select based multiple stream
      handler so that STDERR is piped to us even if stream merging is
      turned off. This tends to reduce the temporal skew between the
      two streams so that error messages appear closer to their
      correct location.
    - Altered the T::P::Grammar interface so that it gets a stream